<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlissAppid</string>
    <string name="action_settings">Settings</string>
    <string name="button_placeholder">Ég stór</string>
    <string name="button_browser">link</string>
    <string name="button_nothafi">Nothafi</string>
    <string name="button_starfsmadur">Starfsmadur</string>
    <string name="button_notkunarskra">Notkunarskra</string>
    <string name="button_buatiltoflu">Búa til töflu</string>
    <string name="BlissAppid">BlissAppid</string>
    <string name="title_activity_nothafi1">nothafi1</string>
    <string name="hello_world">Hello World!</string>
    <string name="rett_notkun">Merktu við rétta notkun ef það á við. Gefðu lýsingu.</string>
    <string name="title_activity_starfsmadur1">starfsmadur1</string>
    <string name="tafla">Búa til töflu</string>
    <string name="title_activity_bua_til_toflu">Bua_til_toflu</string>
    <string name="title_activity_notkunarskra">Notkunarskra</string>
    <string name="settuinn">Settu inn tákn</string>
    <string name="settuinn1">Lýsing á aðstæðum</string>
    <string name="settuinnnafn">Settu inn nafn á táknum sem þú vilt</string>
    <string name="settuinnupphafsmynd">Settu inn uppahafsmynd</string>
    <string name="settuinnmyndupphafsmynd">Settu inn takn fyrir uppahafsmynd</string>
    <string name="fjorir">4</string>
    <string name="sex">6</string>
    <string name="niu">9</string>
    <string name="tolf">12</string>
    <string name="title_activity_bio">bio</string>
    <string name="hello_starfsmadur">Starfsmannaaðgangur</string>
    <string name="title_activity_full_blisstafla">full_blisstafla</string>
    <string name="title_activity_tafla11">tafla11</string>
    <string name="title_activity_tafla12">tafla12</string>
    <string name="title_activity_tafla13">tafla13</string>
    <string name="title_activity_tafla14">tafla14</string>
    <string name="title_activity_tafla16">tafla16</string>
    <string name="title_activity_tafla15">tafla15</string>
    <string name="title_activity_tafla21">tafla21</string>
    <string name="title_activity_tafla22">tafla22</string>
    <string name="title_activity_tafla23">tafla23</string>
    <string name="title_activity_tafla24">tafla24</string>

    <string name="oll_takn">Her kemur listi yfir oll takn</string>


</resources>
